recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: not found: value level
  if (level < 1){return}
      ^